# repors

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: execution.rs  lib.rs  main.rs  manifest.rs  tree.rs
test/fixtures/: default.xml  stm-oe-manifest-openstlinux-5.15-yocto-kirkstone-mp1-v24.07.17.xml
